--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ div.health_bar_style{
 
     width:70%;
 border: 4px solid blue;
-height: 600px;
+height: 576px;
 background-color: black;
 /* z-index: 20; */
 }
@@ -68,8 +68,9 @@ visibility: hidden;
     font-size: 30px;
     font-weight: 700;
     cursor: pointer
+}
 
-div.health_bar_style{
+#div health_bar_style{
     width:10 px;
     height: 100px;
     border-radius: 
