--- a/index.css
+++ b/index.css
@@ -25,8 +25,9 @@ iframe{
 visibility: hidden;
 }
 #mute{
-     cursor: pointer; 
-   float: right;
+    background-color: aqua;
+    cursor: pointer; 
+    float: right;
     width: 60px;
     height: 40px;
     
@@ -43,8 +44,8 @@ visibility: hidden;
     width: 150px;
     font-size: 20px;
     color: white;
-    top:15%;
-    right: 16%;
+    top: 10%;
+    right: 23.5%;
     cursor: pointer; 
 }
 #main{
