--- a/index.css
+++ b/index.css
@@ -82,3 +82,59 @@ visibility: hidden;
     height: 30px; 
     width: 200px
 }
+
+/* music controller */
+#musicIcon
+{
+    border-radius: 6px;
+    position: absolute;
+    background-color:  rgb(255, 255, 255);  
+    color: rgb(255, 255, 255);
+    bottom: 35%;
+    right: 8%;
+    cursor: pointer; 
+}
+
+#prevSong
+{
+    border-radius: 6px;
+    position: absolute;
+    background-color:  rgb(255, 255, 255);  
+    color: white;
+    bottom: 28%;
+    right: 15%;
+    cursor: pointer; 
+}
+
+#playSong
+{
+    border-radius: 6px;
+    position: absolute;
+    background-color:  rgb(255, 255, 255);  
+    color: white;
+    bottom: 28%;
+    right: 12%;
+    cursor: pointer; 
+}
+
+#pauseSong
+{
+    border-radius: 6px;
+    position: absolute;
+    background-color:  rgb(255, 255, 255);  
+    color: white;
+    bottom: 28%;
+    right: 9%;
+    cursor: pointer; 
+}
+
+#nextSong
+{
+    border-radius: 6px;
+    position: absolute;
+    background-color:  rgb(255, 255, 255);  
+    color: white;
+    bottom: 28%;
+    right: 6%;
+    cursor: pointer; 
+}
