--- a/index.css
+++ b/index.css
@@ -18,6 +18,96 @@ background-color: black;
 /* z-index: 20; */
 }
 
+div#outer {
+    position: relative; display: inline-block
+}
+
+div#container {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 20px;
+}
+
+div.player_health_bar {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    border-top: 4px solid white;
+    border-left: 4px solid white;
+    border-bottom: 4px solid white;
+}
+
+div.health_background {
+    background-color: red; 
+    height: 30px; 
+    width: 100%
+}
+
+div.magic_background {
+    position: absolute; 
+    background: #f8b981; 
+    top: 70%; 
+    right: 0; 
+    bottom: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 30%;
+}
+
+div#playerHealth, div#enemyHealth{
+    position: absolute;
+    background: #818cf8;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 70%;
+}
+
+div#playerMagic, div#enemyMagic {
+    position: absolute;
+    background: #bff881;
+    top: 70%;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 30%;
+}
+
+div#timer {
+    background-color: black;
+    width: 100px;
+    height: 50px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: 4px solid white;
+}
+
+div.enemy_health_bar {
+    position: relative;
+    width: 100%;
+    border-top: 4px solid white;
+    border-bottom: 4px solid white;
+    border-right: 4px solid white;
+}
+div#displayText {
+    position: absolute;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
+}
+
 iframe{
     margin-top: 5%;
     height: 500px;
@@ -138,6 +228,6 @@ visibility: hidden;
     right: 6%;
     cursor: pointer; 
 }
-canvas{
-    /* position: relative !important; */
+canvas {
+   /* position: relative !important;  */
 }
