--- a/css/index.css
+++ b/css/index.css
@@ -1,233 +1,114 @@
-div.health_bar_style{
-    height: 100px;
-    border-radius: 6px 12px 18px 24px;
-    position: absolute;
-    background-color:  red;  
-    height: 30px; 
-    width: 200px;
-    top:15%;
-    left: 16%
-}
-.iframe-cont{
-    margin: 7% auto;
-
-    width:70%;
-border: 4px solid blue;
-height: 576px;
-background-color: black;
-/* z-index: 20; */
-}
-
-div#outer {
-    position: relative; display: inline-block
-}
-
-div#container {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    align-items: center;
-    padding: 20px;
-}
-
-div.player_health_bar {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    border-top: 4px solid white;
-    border-left: 4px solid white;
-    border-bottom: 4px solid white;
-}
-
-div.health_background {
-    background-color: red; 
-    height: 30px; 
-    width: 100%
-}
-
-div.magic_background {
-    position: absolute; 
-    background: #f8b981; 
-    top: 70%; 
-    right: 0; 
-    bottom: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 30%;
-}
-
-div#playerHealth, div#enemyHealth{
-    position: absolute;
-    background: #818cf8;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 70%;
-}
-
-div#playerMagic, div#enemyMagic {
-    position: absolute;
-    background: #bff881;
-    top: 70%;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 30%;
-}
-
-div#timer {
-    background-color: black;
-    width: 100px;
-    height: 50px;
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    border: 4px solid white;
-}
-
-div.enemy_health_bar {
-    position: relative;
-    width: 100%;
-    border-top: 4px solid white;
-    border-bottom: 4px solid white;
-    border-right: 4px solid white;
-}
-div#displayText {
-    position: absolute;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: none;
-}
-
-iframe{
-    margin-top: 5%;
-    height: 500px;
-/* display: none */
-visibility: hidden;
-}
-#mute{
-    background-color: aqua;
-    cursor: pointer; 
-    float: right;
-    width: 60px;
-    height: 40px;
+* {
+    /*background: #25252a;*/
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     
 }
-.fa{
-    color: white;
-}
-#back{
-    /* height: 100px; */
-    border-radius: 6px;
-    position: absolute;
-    background-color:  red;  
-    height: 30px; 
-    width: 200px;
-    font-size: 20px;
-    color: white;
-    top: 15%;
-    right: 1.5%;
-    cursor: pointer; 
-}
-#main{
+
+body {
+    background-color: white;
     text-align: center;
 }
-#main h1{
-    font-weight: 900;
+
+h1 {
     font-size: 120px;
-    font-style: italic;
-    /*font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* font-size: large; */
     font-family: 'Road Rage', cursive;
+    margin-bottom: 0;
+    /* adjust this later*/
+    margin-top: 10rem;
 }
 
-#main h2{
+h2 {
+    margin: 10px;
     font-size: 30px;
 }
-#main button{
+
+button {
+    width: 170px;
+    height: 60px;
     color: white;
     background-color: black;
-    padding: 10px 40px;
     font-size: 30px;
     font-weight: 700;
-    cursor: pointer
+    border-radius: 4px;
+    /* adjust this later */
+    margin-bottom:5rem;
 }
 
-#div health_bar_style{
-    width:10 px;
-    height: 100px;
-    border-radius: 
-    6px 12px 18px 24px;
-
-    background-color:  red;  
-    height: 30px; 
-    width: 200px
+button:hover {
+    border-color: black;
+    background-color: white;
+    color: black;
+    cursor: pointer;
 }
 
-/* music controller */
-#musicIcon
-{
-    border-radius: 6px;
-    position: absolute;
-    background-color:  rgb(255, 255, 255);  
-    color: rgb(255, 255, 255);
-    bottom: 35%;
-    right: 8%;
-    cursor: pointer; 
-}
-
-#prevSong
-{
-    border-radius: 6px;
-    position: absolute;
-    background-color:  rgb(255, 255, 255);  
+footer {
+    background: #111;
+    height: auto;
+    width: 100vw;
+    padding-top: 40px;
     color: white;
-    bottom: 28%;
-    right: 18%;
-    cursor: pointer; 
 }
 
-#playSong
-{
-    border-radius: 6px;
-    position: absolute;
-    background-color:  rgb(255, 255, 255);  
-    color: white;
-    bottom: 28%;
-    right: 13%;
-    cursor: pointer; 
+.content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
-#pauseSong
-{
-    border-radius: 6px;
-    position: absolute;
-    background-color:  rgb(255, 255, 255);  
-    color: white;
-    bottom: 28%;
-    right: 10%;
-    cursor: pointer; 
+.content h3 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
 }
 
-#nextSong
-{
-    border-radius: 6px;
-    position: absolute;
-    background-color:  rgb(255, 255, 255);  
+.content p {
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+
+.socials li {
+    margin: 0 10px;
+}
+
+.socials a {
+    text-decoration: none;
     color: white;
-    bottom: 28%;
-    right: 6%;
-    cursor: pointer; 
 }
-canvas {
-   /* position: relative !important;  */
+
+.socials a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
 }
+
+.socials a:hover i{
+    color: aqua;
+}
+
+.copyright {
+    background: black;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.copyright p {
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+
