--- a/css/canvas.css
+++ b/css/canvas.css
@@ -1,4 +1,9 @@
-div.health_bar_style{
+* {
+    box-sizing: border-box;
+    font-family: 'Press Start 2P', cursive;
+  }
+
+div.health_bar_style {
     height: 100px;
     border-radius: 6px 12px 18px 24px;
     position: absolute;
@@ -8,18 +13,24 @@ div.health_bar_style{
     top:15%;
     left: 16%
 }
-.iframe-cont{
+
+.iframe-cont {
     margin: 7% auto;
 
     width:70%;
-border: 4px solid blue;
-height: 576px;
-background-color: black;
-/* z-index: 20; */
+    border: 4px solid blue;
+    height: 576px;
+    background-color: black;
+    /* z-index: 20; */
+}
+
+canvas {
+    border-color: green;
 }
 
 div#outer {
-    position: relative; display: inline-block
+    position: relative; 
+    display: inline-block;
 }
 
 div#container {
@@ -57,7 +68,7 @@ div.magic_background {
     height: 30%;
 }
 
-div#playerHealth, div#enemyHealth{
+div#playerHealth, div#enemyHealth {
     position: absolute;
     background: #818cf8;
     top: 0;
@@ -96,6 +107,7 @@ div.enemy_health_bar {
     border-bottom: 4px solid white;
     border-right: 4px solid white;
 }
+
 div#displayText {
     position: absolute;
     color: white;
@@ -108,12 +120,12 @@ div#displayText {
     display: none;
 }
 
-iframe{
-    margin-top: 5%;
-    height: 500px;
-/* display: none */
-visibility: hidden;
+iframe {
+    /* display: none */
+    visibility: hidden;
 }
+
+/* commenting out since we are using music player
 #mute{
     background-color: aqua;
     cursor: pointer; 
@@ -121,87 +133,94 @@ visibility: hidden;
     width: 60px;
     height: 40px;
     
-}
-.fa{
-    color: white;
-}
-#back{
-    /* height: 100px; */
-    border-radius: 6px;
+} */
+
+/* Red back button */
+#back {
+    border-radius: 4px;
     position: absolute;
     background-color:  red;  
     height: 30px; 
     width: 200px;
     font-size: 20px;
     color: white;
-    top: 15%;
-    right: 1.5%;
+    top: 5%;
+    right: 5.5%;
     cursor: pointer; 
 }
 
-#div health_bar_style{
-    width:10 px;
-    height: 100px;
-    border-radius: 
-    6px 12px 18px 24px;
-
-    background-color:  red;  
-    height: 30px; 
-    width: 200px
-}
-
 /* music controller */
-#musicIcon
-{
+#musicIcon {
     border-radius: 6px;
     position: absolute;
     background-color:  rgb(255, 255, 255);  
     color: rgb(255, 255, 255);
-    bottom: 35%;
-    right: 8%;
+    bottom: 15%;
+    right: 45%;
     cursor: pointer; 
 }
 
-#prevSong
-{
+#prevSong {
     border-radius: 6px;
     position: absolute;
     background-color:  rgb(255, 255, 255);  
     color: white;
-    bottom: 28%;
-    right: 18%;
+    bottom: 10%;
+    right: 53%;
     cursor: pointer; 
 }
 
-#playSong
-{
+#playSong {
     border-radius: 6px;
     position: absolute;
     background-color:  rgb(255, 255, 255);  
     color: white;
-    bottom: 28%;
-    right: 13%;
+    bottom: 10%;
+    right: 49%;
     cursor: pointer; 
 }
 
-#pauseSong
-{
+#pauseSong {
     border-radius: 6px;
     position: absolute;
     background-color:  rgb(255, 255, 255);  
     color: white;
-    bottom: 28%;
-    right: 10%;
+    bottom: 10%;
+    right: 46%;
     cursor: pointer; 
 }
 
-#nextSong
-{
+#nextSong {
     border-radius: 6px;
     position: absolute;
     background-color:  rgb(255, 255, 255);  
     color: white;
-    bottom: 28%;
-    right: 6%;
+    bottom: 10%;
+    right: 42%;
     cursor: pointer; 
+}
+
+.everything {
+    align-items: center;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+/* experimenting with layout */
+.left-aside {
+    grid-column: 1;
+    grid-row: 1;
+    background-color: red;
+    height: 576px;
+    width: 400px;
+}
+
+.right-aside {
+    grid-column: 3;
+    grid-row: 1;
+    background-color: blue;
+    height: 576px;
+    width: 400px;
 }
