changed the footer

--- a/css/index.css
+++ b/css/index.css
@@ -123,4 +123,10 @@ footer {
     word-spacing: 2px;
     text-transform: capitalize;
 }
+/*
+change characters
+change designs
+change backgrounds
+pestana instructiones
+*/
 
