Cycle through BG images.

--- a/css/canvas.css
+++ b/css/canvas.css
@@ -283,7 +283,7 @@ li, a {
 
 header {
     display: flex;
-    background-color: #1b1b1b;
+    background-color: #818181;
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
