--- a/css/character_selection.css
+++ b/css/character_selection.css
@@ -11,7 +11,8 @@ h1 {
 }
 
 canvas {
-	border: 1px solid red;
+	border: 2px solid aquamarine;
+	border-radius: 2px;
 	height: 300px;
 	width: 200px;
 }
