--- a/css/canvas.css
+++ b/css/canvas.css
@@ -1,136 +1,141 @@
+@import url("https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
-    /*background: #25252a;*/
-    box-sizing: border-box;
-    font-family: 'Press Start 2P', cursive;
-  }
+	margin: 0;
+	padding: 0;
+	/*background: #25252a;*/
+	box-sizing: border-box;
+	font-family: "Press Start 2P", sans-serif;
+}
 
 /* main body */
 body {
-    text-align: center;
-    position: relative;
-    padding-bottom: 98px;
-    background-color: #4e4e4e;
+	text-align: center;
+	position: relative;
+	padding-bottom: 98px;
+	background-color: #4e4e4e;
 }
 
 /* game stats */
 div.health_bar_style {
-    height: 100px;
-    border-radius: 6px 12px 18px 24px;
-    position: absolute;
-    background-color:  red;  
-    height: 30px; 
-    width: 200px;
-    top:15%;
-    left: 16%
+	height: 100px;
+	border-radius: 6px 12px 18px 24px;
+	position: absolute;
+	background-color: red;
+	height: 30px;
+	width: 200px;
+	top: 15%;
+	left: 16%;
 }
 
 .iframe-cont {
-    margin: 7% auto;
+	margin: 7% auto;
 
-    width:70%;
-    border: 4px solid blue;
-    height: 576px;
-    background-color: black;
-    /* z-index: 20; */
+	width: 70%;
+	border: 4px solid blue;
+	height: 576px;
+	background-color: black;
+	/* z-index: 20; */
 }
 
 div#outer {
-    position: relative; 
-    display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 div#container {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    align-items: center;
-    padding: 20px;
+	position: absolute;
+	display: flex;
+	width: 100%;
+	align-items: center;
+	padding: 20px;
 }
 
 div.player_health_bar {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    border-top: 4px solid white;
-    border-left: 4px solid white;
-    border-bottom: 4px solid white;
+	position: relative;
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+	border-top: 4px solid white;
+	border-left: 4px solid white;
+	border-bottom: 4px solid white;
 }
 
 div.health_background {
-    background-color: red; 
-    height: 30px; 
-    width: 100%
+	background-color: red;
+	height: 30px;
+	width: 100%;
 }
 
 div.magic_background {
-    position: absolute; 
-    background: #f8b981; 
-    top: 70%; 
-    right: 0; 
-    bottom: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 30%;
+	position: absolute;
+	background: #f8b981;
+	top: 70%;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 30%;
 }
 
-div#playerHealth, div#enemyHealth {
-    position: absolute;
-    background: #818cf8;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 70%;
+div#playerHealth,
+div#enemyHealth {
+	position: absolute;
+	background: #818cf8;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 70%;
 }
 
-div#playerMagic, div#enemyMagic {
-    position: absolute;
-    background: #bff881;
-    top: 70%;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 30%;
+div#playerMagic,
+div#enemyMagic {
+	position: absolute;
+	background: #bff881;
+	top: 70%;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 30%;
 }
 
 div#timer {
-    background-color: black;
-    width: 100px;
-    height: 50px;
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    border: 4px solid white;
+	background-color: black;
+	width: 100px;
+	height: 50px;
+	flex-shrink: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: white;
+	border: 4px solid white;
 }
 
 div.enemy_health_bar {
-    position: relative;
-    width: 100%;
-    border-top: 4px solid white;
-    border-bottom: 4px solid white;
-    border-right: 4px solid white;
+	position: relative;
+	width: 100%;
+	border-top: 4px solid white;
+	border-bottom: 4px solid white;
+	border-right: 4px solid white;
 }
 
 div#displayText {
-    position: absolute;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: none;
+	position: absolute;
+	color: white;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	display: none;
 }
 
 iframe {
-    /* display: none */
-    visibility: hidden;
+	/* display: none */
+	visibility: hidden;
 }
 
 /* end of game stats */
@@ -147,184 +152,201 @@ iframe {
 
 /* Red back button */
 #back {
-    border-radius: 4px;
-    position: absolute;
-    background-color:  red;  
-    height: 30px; 
-    width: 200px;
-    font-size: 20px;
-    color: white;
-    top: 15%;
-    right: 5.5%;
-    cursor: pointer; 
+	border-radius: 4px;
+	position: absolute;
+	background-color: red;
+	height: 30px;
+	width: 200px;
+	font-size: 20px;
+	color: white;
+	top: 15%;
+	right: 5.5%;
+	cursor: pointer;
 }
 
 .everything {
-    padding-top: 60px;
-    position: relative;
-    align-items: center;
-    justify-items: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    
-    width: 100%;
+	padding-top: 60px;
+	position: relative;
+	align-items: center;
+	justify-items: center;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+
+	width: 100%;
 }
 
 /* experimenting with layout */
 .left-aside {
-    grid-column: 1;
-    grid-row: 1;
-    background-color: #4e4e4e;
-    height: 100%;
-    width: 100%;
+	grid-column: 1;
+	grid-row: 1;
+	background-color: #4e4e4e;
+	height: 100%;
+	width: 100%;
 }
 
 canvas {
-    width: 1024;
-    border: 1px solid red;
-    
+	width: 1024;
+	border: 1px solid red;
 }
 
 .right-aside {
-    grid-column: 3;
-    grid-row: 1;
-    background-color: #4e4e4e;
-    height: 100%;
-    width: 100%;
+	grid-column: 3;
+	grid-row: 1;
+	background-color: #4e4e4e;
+	height: 100%;
+	width: 100%;
 }
 
 .music-player {
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    height: 40px;
-    padding: 20px;
-    border: 20px;
-    border-color: black;
-    align-items: center;
-    justify-items: center;
-    max-width: 100%;
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	height: 40px;
+	padding: 20px;
+	margin-left: 550px;
+	margin-right: 550px;
+	border: 20px;
+	border-color: black;
+	align-items: center;
+	justify-items: center;
+	max-width: 100%;
 }
-
 
 /* music controller */
 
-
 #prevSong {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    cursor: pointer;
-    grid-column: 1;
-    grid-row: 1; 
+	height: 50px;
+	width: 50px;
+	position: relative;
+	cursor: pointer;
+	grid-column: 1;
+	grid-row: 1;
 }
 
 #playSong {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    cursor: pointer; 
-    grid-column: 2;
-    grid-row: 1;
+	height: 50px;
+	width: 50px;
+	position: relative;
+	cursor: pointer;
+	grid-column: 2;
+	grid-row: 1;
 }
 
 #pauseSong {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    cursor: pointer; 
-    grid-column: 3;
-    grid-row: 1;
+	height: 50px;
+	width: 50px;
+	position: relative;
+	cursor: pointer;
+	grid-column: 3;
+	grid-row: 1;
 }
 
 #nextSong {
-    height: 50px;
-    width: 50px;
-    position: relative;
-    cursor: pointer; 
-    grid-column: 4;
-    grid-row: 1;
+	height: 50px;
+	width: 50px;
+	position: relative;
+	cursor: pointer;
+	grid-column: 4;
+	grid-row: 1;
 }
 
 /* end of music controller */
 
 /* add footer to this page */
 footer {
-    background-color: #111;
-    color: white;
-    position: absolute;
-    bottom: 0;
-    min-width: 100%;
-    
+	background-color: #111;
+	color: white;
+	position: absolute;
+	bottom: 0;
+	min-width: 100%;
 }
 
-
 .copyright {
-    background: black;
-    min-width: 100%;
-    padding: 20px 0;
-    text-align: center;
+	background: black;
+	min-width: 100%;
+	padding: 20px 0;
+	text-align: center;
 }
 
 .copyright p {
-    font-size: 10px;
-    word-spacing: 2px;
-    text-transform: capitalize;
+	font-size: 14px;
+	word-spacing: 2px;
+	text-transform: capitalize;
+	font-family: "Times New Roman", Times, serif;
 }
 /* end of footer */
 
 /* nav bar */
-li, a {
-    font-weight: 500;
-    font-size: 16px;
-    color: white;
-    text-decoration: none;
+li,
+a {
+	font-weight: 900;
+	font-size: 26px;
+	color: black;
+	text-decoration: none;
+	font-family: "Open Sans", sans-serif;
+	/* text-transform: uppercase; */
 }
 
 header {
-    display: flex;
-    background-color: #818181;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
+	display: flex;
+	background-color: #818181;
+	justify-content: space-between;
+	align-items: center;
+	padding-left: 200px;
+	padding-right: 200px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	/* padding: 30px 10%; */
 }
 
 .logo {
-    cursor: pointer;
-    width: 281px;
-    height: 100px;
-
+	cursor: pointer;
+	width: 281px;
+	height: 100px;
 }
 
 .navigation {
-    list-style: none;
+	list-style: none;
 }
 
 .navigation li {
-    display: inline-block;
-    padding: 0px 20px;
+	display: inline-block;
+	padding: 0px 20px;
 }
 
 .navigation li a {
-    transition: all 0.3s ease 0s;
+	transition: all 0.3s ease 0s;
 }
 
 .navigation li a:hover {
-    color: #0088a9;
+	color: white;
+	font-size: 35px;
 }
 
 .link {
-    padding: 9px 25px;
-    background-color: red;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+	padding: 14px 25px;
+	font-size: 18px;
+	background-color: red;
+	color: white;
+	border: none;
+	border-radius: 50px;
+	cursor: pointer;
+	transition: all 0.3s ease 0s;
+	font-family: "Press Start 2P", sans-serif;
 }
 
 .link:hover {
-    background-color: rgba(0, 136, 169, 0.8);
-    border: red;
+	background-color: #818181;
+	color: #111;
 }
 
 /* end of nav bar */
+
+h1 {
+	color: white;
+	font-size: 40px;
+	font-family: "Zen Dots", sans-serif;
+	letter-spacing: 10px;
+	text-transform: uppercase;
+	font-weight: 900px;
+}
