--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,8 @@
 * {
-    /*background: #25252a;*/
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+	/*background: #25252a;*/
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 /*main {
@@ -11,117 +10,116 @@
 }
 */
 .container {
-    overflow: auto;
-    padding-bottom:100px;
+	overflow: auto;
+	padding-bottom: 100px;
 }
 
 body {
-    text-align: center;
-    position: relative;
-    padding-bottom: 274px;
-    min-height: 100vh;
+	text-align: center;
+	position: relative;
+	padding-bottom: 274px;
+	min-height: 100vh;
 }
 
 h1 {
-    font-size: 120px;
-    font-family: 'Road Rage', cursive;
-    margin-bottom: 0;
-    /* adjust this later*/
-    margin-top: 10rem;
+	font-size: 120px;
+	font-family: "Road Rage", sans-serif;
+	margin-bottom: 0;
+	/* adjust this later*/
+	margin-top: 10rem;
 }
 
 h2 {
-    margin: 10px;
-    font-size: 30px;
+	margin: 10px;
+	font-size: 30px;
 }
 
 button {
-    width: 170px;
-    height: 60px;
-    color: white;
-    background-color: black;
-    font-size: 30px;
-    font-weight: 700;
-    border-radius: 4px;
+	width: 170px;
+	height: 60px;
+	color: white;
+	background-color: black;
+	font-size: 30px;
+	font-weight: 700;
+	border-radius: 4px;
 }
 
 button:hover {
-    border-color: black;
-    background-color: white;
-    color: black;
-    cursor: pointer;
+	border-color: black;
+	background-color: white;
+	color: black;
+	cursor: pointer;
 }
 
 footer {
-    background-color: #111;
-    padding-top: 40px;
-    color: white;
-    position: absolute;
-    bottom: 0;
-    min-width: 100%;
-    
+	background-color: #111;
+	padding-top: 40px;
+	color: white;
+	position: absolute;
+	bottom: 0;
+	min-width: 100%;
 }
 
 .content {
-    background-color: #111;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+	background-color: #111;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
 }
 
 .content h3 {
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 3rem;
+	font-size: 1.8rem;
+	font-weight: 400;
+	text-transform: capitalize;
+	line-height: 3rem;
 }
 
 .content p {
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
+	max-width: 500px;
+	margin: 10px auto;
+	line-height: 28px;
+	font-size: 14px;
 }
 
 .socials {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
+	list-style: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 1rem 0 3rem 0;
 }
 
 .socials li {
-    margin: 0 10px;
+	margin: 0 10px;
 }
 
 .socials a {
-    text-decoration: none;
-    color: white;
+	text-decoration: none;
+	color: white;
 }
 
-.socials a i{
-    font-size: 1.1rem;
-    transition: color .4s ease;
+.socials a i {
+	font-size: 1.1rem;
+	transition: color 0.4s ease;
 }
 
-.socials a:hover i{
-    color: aqua;
+.socials a:hover i {
+	color: aqua;
 }
 
 .copyright {
-    background: black;
-    min-width: 100%;
-    padding: 20px 0;
-    text-align: center;
+	background: black;
+	min-width: 100%;
+	padding: 20px 0;
+	text-align: center;
 }
 
 .copyright p {
-    font-size: 14px;
-    word-spacing: 2px;
-    text-transform: capitalize;
+	font-size: 14px;
+	word-spacing: 2px;
+	text-transform: capitalize;
 }
 /*
 change characters
@@ -129,4 +127,3 @@ change designs
 change backgrounds
 pestana instructiones
 */
-
