--- a/css/index.css
+++ b/css/index.css
@@ -22,11 +22,11 @@ body {
 }
 
 h1 {
-	font-size: 120px;
-	font-family: "Road Rage", sans-serif;
-	margin-bottom: 0;
-	/* adjust this later*/
-	margin-top: 10rem;
+	/* font-size: 120px; */
+	/* font-family: "Road Rage", sans-serif; */
+	/* margin-bottom: 0; */
+	/* adjust this later */
+	margin-top: 7rem;
 }
 
 h2 {
