updated title font

--- a/css/canvas.css
+++ b/css/canvas.css
@@ -345,9 +345,9 @@ header {
 
 h1 {
 	color: white;
-	font-size: 40px;
-	font-family: "Zen Dots", sans-serif;
-	letter-spacing: 10px;
+	font-size: 60px;
+	font-family: "Road Rage", cursive;
+	letter-spacing: 7px;
 	text-transform: uppercase;
 	font-weight: 900px;
 }
